[project]
name = "apscheduler_db"
version = "0.1.0"
description = "一个通用的apscheduler数据库配置服务"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uvicorn[standard]",
    "gunicorn",
    "fastapi[all]",
    "sqlmodel",
    "greenlet",
    "python-dotenv",
    "redis",
    "loguru",
    "asyncmy",
    "passlib",
    "bcrypt",
    "apscheduler",
    "cryptography",
    "pymysql"
]
